--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #f1265d;
+  		background-color: #151927;
 		  font-family: "Helvetica,Arial,FreeSans";
   		color: #ffffff;
     }
